test/org/midica/testfiles/failing/block-param-invalid.midica
INCLUDE_FILE inc/instruments.midica

(
	0 c /4
) v=50
